# CS6903-PGP-Password-Manager

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  __init__.py  mypy.ini  pyproject.toml
documentation/: CS6903-PGP-Password-Manager-Workflow.drawio
keys/: alice.asc  alice_public.asc  john_doe.asc
migrations/versions/: a08cd599cfff_initial_migration.py
src/CS6903-PGP-Password-Manager/: __init__.py
src/CS6903-PGP-Password-Manager/static/: pgp.js
src/CS6903-PGP-Password-Manager/templates/: layout.html
src/CS6903-PGP-Password-Manager/templates/public/: home.html
src/CS6903-Vaccine-Passport-Checker/: __init__.py
src/CS6903_PGP_Password_Manager/: app.py  constants.py  models.py  pgp.py
src/CS6903_PGP_Password_Manager/static/: app.js  pgp.js
src/CS6903_PGP_Password_Manager/templates/: app.js.html  layout.html
src/CS6903_PGP_Password_Manager/templates/public/: home.html
